# local-coding-agent

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
agent/: __init__.py  actions.py  config.py  git_manager.py  llm_client.py  logger.py  loop.py  main.py  memory.py  policy.py  prompts.py  sandbox.py  schemas.py  searxng.py
examples/: simple_task.md
tests/: test_actions.py  test_git_manager.py  test_loop.py  test_policy.py  test_sandbox.py  test_schemas.py  test_searxng.py
